Meld with episode_7.
