# product-api/handlers/get.go
@@ -7,22 +7,22 @@ import (
 )
 
 // swagger:route GET /products products listProducts
-// Returns a list of products
+// Return a list of products from the database
 //
 // This will show all available products in the system
 //
 // Responses:
 //   200: productsResponse
 
-// GetProducts returns the products from the data store
-func (p *Products) GetProducts(w http.ResponseWriter, r *http.Request) {
-	p.l.Println("Handle GET Products")
+// ListAll handles GET requests and returns all current products
+func (p *Products) ListAll(rw http.ResponseWriter, r *http.Request) {
+	p.l.Println("[DEBUG] get all records")
 
-	lp := data.GetProducts()
+	prods := data.GetProducts()
 
-	err := lp.ToJSON(w)
+	err := data.ToJSON(prods, rw)
 	if err != nil {
-		http.Error(w, "Unable to marshal json", http.StatusInternalServerError)
-		return
+		// we should never be here but log the error just incase
+		p.l.Println("[ERROR] serializing product", err)
 	}
 }
